Add Dot component

--- a/src/App.css
+++ b/src/App.css
@@ -1,2 +1,24 @@
-.app {
+* {
+  box-sizing: border-box;
+}
+
+html,
+body,
+#root {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  touch-action: none;
+}
+
+body {
+  background: linear-gradient(90deg, #181818 60px, transparent 1%) center, linear-gradient(#181818 60px, transparent 1%) center, #505050;
+  background-size: 62px 62px;
+}
+
+
+canvas {
+  height: 100vh;
+  width: 100%;
 }
