--- a/src/App.css
+++ b/src/App.css
@@ -17,6 +17,15 @@ body {
   background-size: 62px 62px;
 }
 
+.video {
+  background-color: black;
+  border-radius: 50%;
+  border: 4px solid #ff1050;
+  height: 200px;
+  margin: 20px;
+  position: absolute;
+  width: 200px;
+}
 
 canvas {
   height: 100vh;
