--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@ body {
   background-size: 62px 62px;
 }
 
-.video {
+.video, .step {
   background-color: black;
   border-radius: 50%;
   border: 4px solid #ff1050;
@@ -25,6 +25,15 @@ body {
   margin: 20px;
   position: absolute;
   width: 200px;
+}
+
+.step {
+  align-items: center;
+  color: #fff;
+  display: flex;
+  font-size: 40px;
+  justify-content: center;
+  border: 4px dotted darkslateblue;
 }
 
 canvas {
