--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,11 @@ canvas {
   height: 100vh;
   width: 100%;
 }
+
+.hand-emoji {
+  bottom: 0;
+  font-size: 80px;
+  margin: 40px;
+  position: absolute;
+  right: 0;
+}
